Moved all enums outside of inline declarations to a proper place where they can be referenced throughout the app.